# gdps-public

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-android.yml  build-windows.yml
android/: .gitignore  build.gradle.kts  update-resources.sh
android/.github/workflows/: build-full.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: mods.json
android/app/src/main/assets/geode.loader/: APISheet-hd.plist  APISheet-uhd.plist  APISheet.plist  BackportSheet-hd.plist  BackportSheet-uhd.plist  BackportSheet.plist  EventSheet-hd.plist  EventSheet-uhd.plist  EventSheet.plist  mod.json
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/customRobTop/: BaseRobTopActivity.kt
android/app/src/main/java/com/geode/launcher/utils/: GeodeUtils.kt
android/app/src/main/java/com/kyurime/geometryjump/: BaseGeometryDashActivity.kt  GJConstants.kt  GeometryDashActivity.kt  ModGlue.kt  SaveUtils.kt  UserDirectoryProvider.kt
android/app/src/main/java/org/cocos2dx/lib/: Cocos2dxAccelerometer.kt  Cocos2dxGLSurfaceView.kt  Cocos2dxHelper.kt  Cocos2dxRenderer.kt
android/app/src/main/res/values/: strings.xml
docs/: build-config.md  crash-reporter.md  ingame-config.md  jni-funcs.md  textures.md
include/base/: cmake_config.hpp.in  config.hpp  game_variables.hpp  platform_helper.hpp
include/classes/: advancedcolorselectwidget.hpp  controlleroverlay.hpp  creditsline.hpp  creditsnode.hpp  creditspopup.hpp  editorhitboxlayer.hpp  gameplaysettingspopup.hpp  loadingfailedhijacklayer.hpp  mainlevelinfopopup.hpp  pageselectpopup.hpp  presencelifecyclewatcher.hpp  remaptriggerpopup.hpp  sessionwidget.hpp  statusindicator.hpp  uploadactionpopup.hpp
include/classes/callbacks/: levelimportcallback.hpp  reloadgamecallback.hpp  showloadingcirclecallback.hpp
include/classes/commands/: commanddispatcher.hpp  rateleveldialog.hpp
include/classes/delegates/: sessiondelegate.hpp
include/classes/extensions/: gjcommentext.hpp  gjsearchobjectext.hpp  leveleditorlayerext.hpp  playlayerext.hpp
include/classes/managers/: controllermanager.hpp  discordmanager.hpp  outfitmanager.hpp  overlaymanager.hpp  secretmanager.hpp  tokenmanager.hpp
include/classes/settings/: settingspage.hpp  settingspopup.hpp  texturesettingspopup.hpp  togglesettingspage.hpp
include/classes/settings/pages/: aboutsettingspage.hpp  editorsettingspage.hpp  gameplaysettingspage.hpp  graphicssettingspage.hpp  interfacesettingspage.hpp  songssettingspage.hpp  tweakssettingspage.hpp
include/classes/speedhack/: speedhackcarddelegate.hpp  speedhacklifecyclewatcher.hpp  speedhackmanagercard.hpp
include/hooks/: ColorSelectPopup.hpp  EditorUI.hpp
resources/: about.md.in  changelog.md  level_19  level_20  level_21  level_21b  level_22  level_23  mod.json.in  outfits.json
src/base/platform/: android.cpp  windows.cpp
src/classes/: advancedcolorselectwidget.cpp  controlleroverlay.cpp  creditsline.cpp  creditsnode.cpp  creditspopup.cpp  editorhitboxlayer.cpp  gameplaysettingspopup.cpp  loadingfailedhijacklayer.cpp  mainlevelinfopopup.cpp  pageselectpopup.cpp  remaptriggerpopup.cpp  sessionwidget.cpp  statusindicator.cpp  uploadactionpopup.cpp
src/classes/callbacks/: inputcallback.cpp  levelimportcallback.cpp  reloadgamecallback.cpp  showloadingcirclecallback.cpp
src/classes/commands/: commanddispatcher.cpp  rateleveldialog.cpp
src/classes/extensions/: playlayerext.cpp
src/classes/managers/: controllermanager.cpp  discordmanager.cpp  outfitmanager.cpp  overlaymanager.cpp  secretmanager.cpp  tokenmanager.cpp
src/classes/settings/: settingspage.cpp  settingspopup.cpp  texturesettingspopup.cpp  togglesettingspage.cpp
src/classes/settings/pages/: aboutsettingspage.cpp  editorsettingspage.cpp  gameplaysettingspage.cpp  graphicssettingspage.cpp  interfacesettingspage.cpp  songssettingspage.cpp  tweakssettingspage.cpp
src/classes/speedhack/: speedhackmanagercard.cpp
src/hooks/: ColorSelectPopup.cpp  EditorPauseLayer.cpp  EditorUI.cpp
src/modules/: badges.cpp  default.cpp  editor.cpp  hacks.cpp  icons.cpp  input.cpp  levels.cpp  limits.cpp  overlay-dev.cpp  overlay.cpp  physics.cpp  presence.cpp  search.cpp  settings.cpp  share.cpp  textures.cpp  token.cpp  urls.cpp  web.cpp
src/modules/hacks/: speedhack.cpp
src/overlay/: README.md  code.cpp  items.cpp  menu.cpp  menu.hpp  utils.hpp
windows/: .gitignore  gdps.iss  package.ps1
